@@ -1,3 +1,7 @@
+2008-09-16  Jonathan Pryor  <jpryor@novell.com>
+
+	* Sequence.cs: Update parameter names for consistency.
+
 2008-09-14  Jonathan Pryor  <jpryor@novell.com>
 
 	* Cons.cs: Remove.  There doesn't seem to be much point to it.
