@@ -1,3 +1,7 @@
+2008-09-16  Jonathan Pryor  <jpryor@novell.com>
+
+	* SequenceTest.cs: Add #regions for use by documentation.
+
 2008-09-15  Jonathan Pryor  <jpryor@novell.com>
 
 	* StringTest.cs: Add #regions and "prettify" the tests so that the tests can
